# memloop

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARTIFACT.md  api-reference.md  architecture.md  configuration.md  data-contract.md  integration.md  observability.md  production.md  quickstart.md  release.md
examples/: README.md  create_demo_dataset.py
memloop/: __init__.py  __main__.py  cli.py
memloop/core/: __init__.py  api_adapter.py  dns_patch.py
memloop/core/configs/: models.yaml  schema.yaml
memloop/data/: __init__.py  azure_embedder.py  build_hierarchy_dynamic.py  build_key_facts_diff.py  gen_gold_answers.py  pre_embed_queries.py  rebuild_distilled_v2.py  rebuild_key_facts.py  rebuild_l1l2_keyfacts.py  redistill_l0.py
memloop/eval/: __init__.py  bm25_rank_analysis.py  bm25_solo_eval.py  eval_embed.py  eval_retrieval_only.py  eval_rouge.py  evaluate_v5.py  fix5_extract_citations.py
memloop/methods/: __init__.py  decay_controller.py  dual_index.py  dual_node.py  hierarchy_builder.py  promotion_controller.py  state_log.py  token_ledger.py
memloop/runners/: __init__.py  run_baseline_flat.py  run_exp_v6.py  run_query_dynamic.py  run_stream_v5.py  run_stream_v5_cite_all.py
scripts/: README.md  launch_v6.sh  rerun_evals.sh  run_erag_query.sh  run_erag_query_chain.sh  run_erag_tier.sh
tests/: test_cli.py  test_dual_node.py
