[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "memloop"
version = "0.1.0"
description = "Hierarchical memory retrieval with event-driven evidence promotion."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "MemLoop Authors"}]
keywords = [
  "retrieval",
  "memory",
  "rag",
  "hierarchical-retrieval",
  "enterprise-search",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=12.0",
  "scikit-learn>=1.3",
  "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
local = [
  "sentence-transformers>=2.2",
  "torch>=2.0",
]
llm = [
  "httpx>=0.24",
  "openai>=1.0",
  "requests>=2.31",
  "tiktoken>=0.5",
]
eval = [
  "rouge-score>=0.1.2",
]
index = [
  "chromadb>=0.4",
]
dev = [
  "build>=1.0",
  "pytest>=8.0",
  "twine>=6.2.0",
]
all = [
  "sentence-transformers>=2.2",
  "torch>=2.0",
  "httpx>=0.24",
  "openai>=1.0",
  "requests>=2.31",
  "tiktoken>=0.5",
  "rouge-score>=0.1.2",
  "chromadb>=0.4",
]

[project.urls]
Homepage = "https://github.com/Hik289/memloop"
Repository = "https://github.com/Hik289/memloop"
Issues = "https://github.com/Hik289/memloop/issues"
Documentation = "https://github.com/Hik289/memloop#documentation"
Changelog = "https://github.com/Hik289/memloop/blob/main/CHANGELOG.md"

[project.scripts]
memloop = "memloop.cli:main"

[tool.setuptools.packages.find]
include = ["memloop*"]

[tool.setuptools.package-data]
"memloop.core" = ["configs/*.yaml"]
